--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,20 +1,3 @@
-/* 优先使用用户系统偏好设置 */
-@media (prefers-color-scheme: dark) {
-  :root {
-    --md-default-bg-color: #121212;
-    --md-default-fg-color: #ffffff;
-    /* 添加其他深色模式变量 */
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --md-default-bg-color: #ffffff;
-    --md-default-fg-color: #000000;
-    /* 添加其他浅色模式变量 */
-  }
-}
-
 [data-md-color-scheme="slate"] {
   --md-default-bg-color: #111113;
   --md-default-fg-color: #c8c8e4;
@@ -24,12 +7,6 @@
   --md-primary-fg-color--dark: #131622;
   --md-typeset-a-color: #8b99d1;
   --md-default-fg-color:#d5d5d5;
-}
-
-[data-md-color-scheme="default"] {
-  /* 修改导航栏背景色 */
-  --md-primary-fg-color: #1d59ff; 
-  --md-default-fg-color: #000000;       /* 主色 */
 }
 
 [data-md-color-scheme="default"] .md-header {
@@ -45,13 +22,6 @@
   border-bottom: 1.5px solid #799af4 !important;
   transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
 }
-
-/* @media screen and (min-width: 76.25em){
-.md-nav--primary .md-nav__title {
-    box-shadow: none !important;
-    transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
-  }
-} */
 
 .md-nav__title  {
     box-shadow: none !important;
@@ -81,9 +51,9 @@
   max-width: 100%;
 }
 
-[data-md-color-scheme] {
+/* [data-md-color-scheme] {
   transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.3s ease;
-}
+} */
 
 .md-nav {
   transition: background-color 0.25s, color 0.1s;
