--- a/site/stylesheets/extra.css
+++ b/site/stylesheets/extra.css
@@ -1,16 +1,26 @@
-[data-md-color-scheme] {
-  transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.3s ease;
+[data-md-color-scheme="slate"] {
+  --md-default-bg-color: #111113;
+  --md-default-fg-color: #c8c8e4;
+  --md-code-bg-color:#161720;
+  --md-primary-fg-color: #131622;
+  --md-primary-fg-color--light: #131622;
+  --md-primary-fg-color--dark: #131622;
+  --md-typeset-a-color: #8b99d1;
+  --md-default-fg-color:#d5d5d5;
 }
 
-.md-nav {
-  transition: background-color 0.25s, color 0.1s;
+[data-md-color-scheme="default"] .md-header {
+  box-shadow: none !important;
+  background-color: #ffffff !important;
+  color: #2e2e2e !important;
+  border-bottom: 1px solid #cdcdcd !important;
+  transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
 }
 
-@media screen and (min-width: 76.25em){
-.md-nav--primary .md-nav__title {
-    box-shadow: none !important;
-    transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
-  }
+[data-md-color-scheme="slate"] .md-header {
+  box-shadow: none !important;
+  border-bottom: 1.5px solid #799af4 !important;
+  transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
 }
 
 .md-nav__title  {
@@ -41,37 +51,15 @@
   max-width: 100%;
 }
 
-[data-md-color-scheme="slate"] {
-  --md-default-bg-color: #111113;
-  --md-default-fg-color: #c8c8e4;
-  --md-code-bg-color:#161720;
-  --md-primary-fg-color: #131622;
-  --md-primary-fg-color--light: #131622;
-  --md-primary-fg-color--dark: #131622;
-  --md-typeset-a-color: #8b99d1;
-  --md-default-fg-color:#d5d5d5;
+/* [data-md-color-scheme] {
+  transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.3s ease;
+} */
+
+.md-nav {
+  transition: background-color 0.25s, color 0.1s;
 }
 
-[data-md-color-scheme="default"] {
-  /* 修改导航栏背景色 */
-  --md-primary-fg-color: #1d59ff; 
-  --md-default-fg-color: #000000;       /* 主色 */
-}
-
-[data-md-color-scheme="default"] .md-header {
-  box-shadow: none !important;
-  background-color: #ffffff !important;
-  color: #2e2e2e !important;
-  border-bottom: 1px solid #cdcdcd !important;
-  transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
-}
-
-[data-md-color-scheme="slate"] .md-header {
-  box-shadow: none !important;
-  border-bottom: 1.5px solid #799af4 !important;
-  transition: background-color 0.8s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease !important;
-}
-
+/* ====================== input =========================*/
 [data-md-color-scheme="default"] .md-search__input {
   background: #cfcfcfbd !important;
   transition: background 0.1s !important;
@@ -114,7 +102,9 @@ input {
 .md-search__output {
   border-radius: 0 0 var(--input-radius) var(--input-radius) !important;
 }
+/* ====================== input =========================*/
 
+/* ====================== sidebar =========================*/
 [data-md-color-scheme="slate"] .md-sidebar__scrollwrap {
   border-right: 1px solid rgb(76, 92, 123) !important; /* 明显的蓝色边框 */
   z-index: 9999 !important;
